2004-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve): Add autoload cookie.

2004-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-get-headers): Don't escape
	Japanese parenthesis (it is not supported by old Emacsen).

2004-10-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (w3m-search-engine-alist): Add the parameter
	`ie=Shift_JIS' to Google for Japanese users.

2004-09-26  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-msdn.el (shimbun-msdn-from-address): Define.

	* shimbun/sb-exconn.el (shimbun-get-headers): Overwrite from
	address.

2004-09-25  Yuya Nishida  <yuya@j96.org>

	* shimbun/sb-impress.el (shimbun-get-headers): Include subtitles
	in the subject strings.

2004-09-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-antenna.el (w3m-about-antenna): Revert 2004-09-16 change.

2004-09-19  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* shimbun/sb-heise.el (shimbun-heise-content-start,
	shimbun-heise-wash-newsticker-article,
	shimbun-heise-wash-newsticker-article): Relax regexps.

2004-09-18  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-ibm-dev.el (shimbun-headers): Update regexp.

2004-09-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-antenna.el (w3m-about-antenna): Change the method to compare
	an arrived time to a last-modified time.

2004-09-15  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-msdn.el: New module.

2004-09-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-mark-unseen): Change default
	value.
	(mew-shimbun-scan-message): Move to the beginning of next line.
	(mew-shimbun-unseen-setup): Use the original function of Mew if it
	suport 'unread'.

2004-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Don't make a new history when reloading.
	(w3m-reload-this-page): Ditto.

	* w3m-hist.el (w3m-history-restore-position): Don't cause an error
	even if a page has shrunk.
